Update register and login system